# frauddetect_crew_azure

./: .env.example  .gitignore  OVERVIEW.md  README.md  pyproject.toml
data/: transactions.csv
knowledge/: fraud_policy.txt  iso_42001_reference.md
models/: feature_columns.json  model_metrics.json  sample_transactions.json
scripts/: train_model.py
src/frauddetect_crew/: crew.py  guardrails.py  main.py  paths.py  quick_chat_litellm.py  quick_embed_azure.py  state.py
src/frauddetect_crew/config/: tasks.yaml
src/frauddetect_crew/guardrails/: __init__.py
src/frauddetect_crew/models/: best_model.pkl
src/frauddetect_crew/tools/: __init__.py  model_scoring_tool.py  transaction_lookup_tool.py
src/frauddetect_flow/: crew.py  main.py
src/frauddetect_flow/config/: agents.yaml  tasks.yaml
src/frauddetect_flow/tools/: __init__.py
tests/: test_crew.py  test_flow.py  test_guardrails.py  test_state.py  test_tools.py
