[project]
name = "frauddetect_flow"
version = "0.2.0"
description = "Single-transaction fraud detection crew powered by CrewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]>=1.9.0",
    "crewai-tools>=1.9.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]

[project.scripts]
run_crew = "frauddetect_flow.main:run"
train_model = "frauddetect_flow.scripts.train_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
